@@ -1,0 +1,45 @@
+/* Copyright (c) 2010 Google Inc.
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+//
+//  GDataYouTubeRating.h
+//
+
+#if !GDATA_REQUIRE_SERVICE_INCLUDES || GDATA_INCLUDE_YOUTUBE_SERVICE
+
+#import "GDataObject.h"
+
+// YouTube like/dislike rating, like
+//
+// <yt:rating numDislikes='28' numLikes='143'/>
+//
+// or
+//
+// <yt:rating value="like"/>
+
+@interface GDataYouTubeRating : GDataObject <GDataExtension>
++ (GDataYouTubeRating *)ratingWithValue:(NSString *)value;
+
+- (NSString *)value;
+- (void)setValue:(NSString *)str;
+
+- (NSNumber *)numberOfLikes; // int
+- (void)setNumberOfLikes:(NSNumber *)num;
+
+- (NSNumber *)numberOfDislikes; // int
+- (void)setNumberOfDislikes:(NSNumber *)num;
+@end
+
+#endif // !GDATA_REQUIRE_SERVICE_INCLUDES || GDATA_INCLUDE_YOUTUBE_SERVICE
